--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,28 @@
 <div class="row mx-0 p-4 color">
   <div class="col-2 color">
-    sdbj
+    <h3>Home</h3>
   </div>
 
   <div class="col-7 bg-white">
     <div *ngFor="let b of blog" class="p-3">
-      <div class="pb-2 d-flex justify-content-between">
-        <h2>{{b.title}}</h2>
-      </div>
-      <div class="d-flex mb-3 text-muted">
-        <i class="material-icons">date_range</i>{{b.date}}2019/11/5 &nbsp; &nbsp; &nbsp;
-        <i class="material-icons">book</i>{{b.category}}
-      </div>
-      <div>
-        {{b.description}}
-      </div>
-      <button class="btn btn-outline-primary mt-4" (click)="onSelect(b)">Read More</button>
-      <div class="mt-5">
-        <hr>
+      <div *ngIf="b.privacy!='private'">
+        <div class="pb-2 d-flex justify-content-between">
+          <h2>{{b.title}}</h2>
+        </div>
+        <div class="d-flex mb-3 text-muted">
+          <i class="material-icons">date_range</i>{{b.date | date: 'short'}} &nbsp; &nbsp; &nbsp;
+          <i class="material-icons">book</i>{{b.category}}
+        </div>
+        <div style="height: 150px; width: 150px">
+          <img src="{{b.image}}" width="100%">
+        </div>
+        <div>
+          {{b.description}}
+        </div>
+        <button class="btn btn-outline-primary mt-4" (click)="onSelect(b)">Read More</button>
+        <div class="mt-5">
+          <hr>
+        </div>
       </div>
     </div>
   </div>
@@ -25,7 +30,7 @@
   <div class="col-3 color">
     <div class="search-container d-flex justify-content-center align-items-center">
       <form action="/action_page.php">
-        <input type="text" placeholder="Search..." name="search" class="p-1">
+        <input type="text" placeholder="Search..." name="search" class="p-1" [(ngModel)]="search" (keyup)="searchfortitle()" >
         <button class="btn btn-primary">Search</button>
       </form>
     </div>
