--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -31,19 +31,23 @@
       </div>
 
       <div class="col-8">
+        <div *ngIf="blog.length == 0" class="text-center mt-5 pt-3">
+          <img src="http://img.clipartlook.com/sad-emoji-clipart-very-sad-emoji-600.png" height="170px">
+          <h1 class="mt-3">No Post Yet !!!</h1>
+        </div>
         <div *ngFor="let b of blog" class="mb-3 p-3 bg-white rounded-lg">
           <div class="pb-2 d-flex justify-content-between">
-            <h2>{{b.title}} {{b.id}}</h2>
+            <h2>{{b.title}}</h2>
             <button class="btn btn-danger" (click)="delete(b.id)">Delete</button>
           </div>
           <div class="d-flex mb-3 text-muted">
-            <i class="material-icons">date_range</i>{{b.date}}2019/11/5 &nbsp; &nbsp; &nbsp;
+            <i class="material-icons">date_range</i>{{b.date | date:'short'}}&nbsp; &nbsp; &nbsp;
             <i class="material-icons">book</i>{{b.category}}
           </div>
           <div>
             {{b.description}}
           </div>
-          <button class="btn btn-outline-primary mt-4">
+          <button class="btn btn-outline-primary mt-4" (click)="onSelect(b)">
             Edit
           </button>
         </div>
