--- a/src/app/myprofile/myprofile.component.html
+++ b/src/app/myprofile/myprofile.component.html
@@ -4,6 +4,8 @@
 
       <div class="col-4 text-center" *ngIf="user">
         <img src="{{userImg}}" alt="user" class="rounded-circle mb-4">
+        <h4><button *ngIf="diff==true" class="btn btn-outline-dark mb-3" (click)="change()">Following</button></h4>
+        <h4><button *ngIf="diff==false" class="btn btn-outline-dark mb-2" (click)="change()">Posts</button></h4>
         <div class="bg-white text-left p-4 rounded-lg">
           <div class="mb-2">
             <h5>Full Name :-</h5>
@@ -30,7 +32,7 @@
         </div>
       </div>
 
-      <div class="col-8">
+      <div *ngIf="diff==true" class="col-8">
         <div *ngIf="blog.length == 0" class="text-center mt-5 pt-3">
           <img src="http://img.clipartlook.com/sad-emoji-clipart-very-sad-emoji-600.png" height="170px">
           <h1 class="mt-3">No Post Yet !!!</h1>
@@ -44,6 +46,9 @@
             <i class="material-icons">date_range</i>{{b.date | date:'short'}}&nbsp; &nbsp; &nbsp;
             <i class="material-icons">book</i>{{b.category}}
           </div>
+          <div *ngIf="b.image!=null" style="height: 150px; width: 150px">
+            <img src="{{b.image}}" width="100%">
+          </div>
           <div>
             {{b.description}}
           </div>
@@ -53,6 +58,23 @@
         </div>
       </div>
 
+      <div *ngIf="diff==false" class="col-8">
+        <table class="table table-hover bg-white rounded-lg">
+          <thead>
+          <tr>
+            <th>Name</th>
+            <th colspan="2">Email</th>
+          </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let a of arr">
+              <td>{{a.users1.name}}</td>
+              <td>{{a.users1.email}}</td>
+              <td><button class="btn btn-outline-danger" (click)="deleteFollowers(a.users1.id)">Unfollow</button></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 </div>
