--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,12 @@
 <div class="row mx-0 p-4 color">
   <div class="col-2 color">
-    <h3>Home</h3>
+    <h3 routerLink="/home">Home</h3>
+    <p class="text-muted">
+      Graduating from the halls of the University Of Western Sydney in late 2011.
+    </p>
+    <div class="text-center mt-5 pt-5">
+      2019 © Blogezy.
+    </div>
   </div>
 
   <div class="col-7 bg-white rounded-lg">
@@ -10,8 +16,9 @@
           <h2>{{b.title}}</h2>
         </div>
         <div class="d-flex mb-3 text-muted">
-          <i class="material-icons">date_range</i>{{b.date | date: 'short'}} &nbsp; &nbsp; &nbsp;
-          <i class="material-icons">book</i>{{b.category}}
+          <i class="material-icons">date_range</i>{{b.date | date: 'short'}} &nbsp; &nbsp;
+          <i class="material-icons">book</i>{{b.category}} &nbsp; &nbsp;
+          <i class="material-icons">person_pin</i>{{b.users.name}}
         </div>
         <div *ngIf="b.image!=null" style="height: 150px; width: 150px">
           <img src="{{b.image}}" width="100%">
@@ -30,9 +37,21 @@
   <div class="col-3 color">
     <div class="search-container d-flex justify-content-center align-items-center">
       <form action="/action_page.php">
-        <input type="text" placeholder="Search..." name="search" class="p-1" [(ngModel)]="search" (keyup)="searchfortitle()" >
-        <button class="btn btn-primary">Search</button>
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search..." name="search" class="p-1" [(ngModel)]="search" (keyup)="searchfortitle()" >
+          <button class="btn btn-primary" (click)="searchfortitle()">Search</button>
+        </div>
       </form>
+    </div>
+
+    <div class="p-2 pt-3 mt-3">
+      <div>
+        TEXT WIDGET
+      </div>
+      <hr>
+      <div class="text-muted">
+        Exercitation photo booth stumptown tote bag Banksy, elit small batch freegan sed. Craft beer elit seitan exercitation, photo booth et 8-bit kale chips proident chillwave deep v laborum. Aliquip veniam delectus, Marfa eiusmod Pinterest in do umami readymade swag.
+      </div>
     </div>
   </div>
 </div>
